Update to HandBrake svn 3594, updated HandbrakeInterop p-invokes. Added blu-ray drive detection to support HB blu-ray. Some refactoring on the drive code. Made Preview window text simpler for 1/1 PAR.

--- a/VidCoder/View/MainWindow.xaml
+++ b/VidCoder/View/MainWindow.xaml
@@ -254,7 +254,7 @@
 						<DataTemplate>
 							<StackPanel Orientation="Horizontal">
 								<Image Source="{Binding Image}" Visibility="{Binding ImageVisible, Converter={StaticResource VisibilityConverter}}" Width="16" Height="16" Margin="4,2,0,2" />
-								<TextBlock Text="{Binding Display}" Style="{StaticResource PlainTitle}" Margin="4" />
+								<TextBlock Text="{Binding Text}" Style="{StaticResource PlainTitle}" Margin="4" />
 							</StackPanel>
 						</DataTemplate>
 					</ComboBox.ItemTemplate>
