--- a/VidCoder/View/ExceptionDialog.xaml
+++ b/VidCoder/View/ExceptionDialog.xaml
@@ -10,7 +10,7 @@
 			Text="VidCoder has experienced an unexpected error. " HorizontalAlignment="Left" Width="322" />
 		<TextBlock Height="23" HorizontalAlignment="Left" Margin="78,41,0,0" Name="textBlock1" Text="Please report this so it can be fixed in the future." VerticalAlignment="Top" Width="293" />
 		<TextBlock Height="23" HorizontalAlignment="Left" Margin="19,63,0,0" Name="textBlock2" Text="Details:" VerticalAlignment="Top" />
-		<TextBox Margin="12,84,12,42" Name="exceptionTextBox" IsReadOnly="True" Background="#EAEAEA" />
+		<TextBox Margin="12,84,12,42" Name="exceptionTextBox" IsReadOnly="True" Background="#EAEAEA" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto" />
 		<Button Content="OK" HorizontalAlignment="Right" Margin="0,0,12,8" Width="75" Height="23" VerticalAlignment="Bottom" IsDefault="True" IsCancel="True" />
 		<Button Height="24" HorizontalAlignment="Right" Margin="0,0,127,8" Name="copyButton" VerticalAlignment="Bottom" Width="68" Click="copyButton_Click">
 			<StackPanel Orientation="Horizontal">
