--- a/VidCoder/View/EncodingWindow.xaml
+++ b/VidCoder/View/EncodingWindow.xaml
@@ -31,7 +31,7 @@
 			<Setter Property="FontWeight" Value="Bold" />
 		</Style>
 		<Style x:Key="AudioOutputPreview" TargetType="TextBlock">
-			<Setter Property="Margin" Value="5,0,5,0" />
+			<Setter Property="Margin" Value="9,0,9,2" />
 		</Style>
 		<Style x:Key="InputOutputInfoSection" TargetType="Border">
 			<Setter Property="Padding" Value="3" />
@@ -615,7 +615,7 @@
 								Background="{StaticResource OutputBrush}"
 								Style="{StaticResource InputOutputInfoSection}"
 								Effect="{StaticResource InfoBoxShadow}">
-								<Grid>
+								<Grid Margin="2">
 									<TextBlock
 										HorizontalAlignment="Left" VerticalAlignment="Top" Margin="2,0,0,0"
 										Style="{StaticResource SectionHeader}"
