--- a/VidCoder/View/MainWindow.xaml
+++ b/VidCoder/View/MainWindow.xaml
@@ -2,6 +2,8 @@
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 	xmlns:local="clr-namespace:VidCoder"
+	xmlns:localmodel="clr-namespace:VidCoder.Model"
+	xmlns:controls="clr-namespace:VidCoder.Controls"
 	xmlns:model="clr-namespace:HandBrake.Interop;assembly=HandBrakeInterop"
 	xmlns:VidCoderDragDrop="clr-namespace:VidCoder.DragDropUtils"
 	Title="VidCoder"
@@ -13,6 +15,7 @@
 	Closing="Window_Closing" AllowDrop="True" PreviewDrop="Window_Drop" PreviewDragOver="Window_PreviewDragOver" MouseDown="Window_MouseDown">
 	<Window.Resources>
 		<local:EnumDisplayer Type="{x:Type model:VideoEncoder}" x:Key="VideoEncoderChoices" />
+		<local:EnumDisplayer Type="{x:Type model:VideoRangeType}" x:Key="VideoRangeTypeChoices" />
 		<Style x:Key="SectionHeader" TargetType="TextBlock">
 			<Setter Property="FontWeight" Value="Bold" />
 			<Setter Property="FontSize" Value="14" />
@@ -44,6 +47,10 @@
 					</DataTemplate>
 				</Setter.Value>
 			</Setter>
+			<Setter Property="Height" Value="23" />
+			<Setter Property="VerticalAlignment" Value="Center" />
+		</Style>
+		<Style x:Key="RangeNumberBox" TargetType="FrameworkElement" BasedOn="{StaticResource RightGridItem}">
 			<Setter Property="Height" Value="23" />
 			<Setter Property="VerticalAlignment" Value="Center" />
 		</Style>
@@ -340,21 +347,49 @@
 							<Polygon Style="{StaticResource ArrowSeparator}" />
 						</StackPanel>
 						<StackPanel Orientation="Horizontal">
-							<TextBlock
-								Visibility="{Binding MultipleChapters, Converter={StaticResource VisibilityConverter}, ConverterParameter=true}"
-								Text="(No chapters found)"
-								Style="{StaticResource DescriptiveText}" />
+							<ComboBox Height="23" VerticalAlignment="Center" Margin="4,0,10,0" HorizontalAlignment="Left" Width="75"
+								ItemsSource="{Binding DisplayNames, Source={StaticResource VideoRangeTypeChoices}}"
+								SelectedValue="{Binding VideoRangeType, Converter={StaticResource VideoRangeTypeChoices}}" />
 							<StackPanel
 								Orientation="Horizontal"
-								Visibility="{Binding MultipleChapters, Converter={StaticResource VisibilityConverter}}">
-								<TextBlock Text="Chapters:" Style="{StaticResource PlainTitle}" />
-								<ComboBox MinWidth="38"
+								Visibility="{Binding ChaptersRangeVisible, Converter={StaticResource VisibilityConverter}}">
+								<ComboBox MinWidth="38" Height="23"
 								ItemsSource="{Binding Chapters}" SelectedItem="{Binding SelectedStartChapter}" Style="{StaticResource ChapterComboBox}" />
 								<TextBlock Text="-" Style="{StaticResource PlainTitle}" />
-								<ComboBox MinWidth="38"
+								<ComboBox MinWidth="38" Height="23"
 								ItemsSource="{Binding Chapters}" SelectedItem="{Binding SelectedEndChapter}" Style="{StaticResource ChapterComboBox}" />
-								<TextBlock Text="{Binding ChaptersSummary}" Style="{StaticResource PlainTitle}" />
 							</StackPanel>
+							<StackPanel
+								Orientation="Horizontal"
+								Visibility="{Binding SecondsRangeVisible, Converter={StaticResource VisibilityConverter}}">
+								<controls:DoubleNumberBox
+									Width="55"
+									Style="{StaticResource RangeNumberBox}"
+									AllowEmpty="False" UpdateBindingOnTextChange="False" Minimum="0"
+									Number="{Binding SecondsRangeStart, Mode=TwoWay}"/>
+								<TextBlock Text="-" Style="{StaticResource PlainTitle}" />
+								<controls:DoubleNumberBox
+									Width="55"
+									Style="{StaticResource RangeNumberBox}"
+									AllowEmpty="False" UpdateBindingOnTextChange="False" Minimum="0.25"
+									Number="{Binding SecondsRangeEnd, Mode=TwoWay}"/>
+							</StackPanel>
+							<StackPanel
+								Orientation="Horizontal"
+								Visibility="{Binding FramesRangeVisible, Converter={StaticResource VisibilityConverter}}">
+								<controls:NumberBox
+									Width="55"
+									Style="{StaticResource RangeNumberBox}"
+									AllowEmpty="False" UpdateBindingOnTextChange="False" Minimum="0"
+									Number="{Binding FramesRangeStart, Mode=TwoWay}"/>
+								<TextBlock Text="-" Style="{StaticResource PlainTitle}" />
+								<controls:NumberBox
+									Width="55"
+									Style="{StaticResource RangeNumberBox}"
+									AllowEmpty="False" UpdateBindingOnTextChange="False" Minimum="1"
+									Number="{Binding FramesRangeEnd, Mode=TwoWay}"/>
+							</StackPanel>
+							<TextBlock Text="{Binding VideoRangeSummary}" Style="{StaticResource PlainTitle}" />
 						</StackPanel>
 					</StackPanel>
 
